# gopan-example

./: .clang-format  LICENSE  gopan.c  gp.c  gp.h  gp_draw.c  gp_props.c  gp_props.h  gp_props_tables.h  gp_ttf.c  gp_ttf.h  meson.build  readme.md
codegen/: PropertyValueAliases.txt  codegen.go
sample/: gopan.c
